z-index fixed

--- a/src/sass/admin-dashboard.scss
+++ b/src/sass/admin-dashboard.scss
@@ -1,6 +1,6 @@
 .dashboard-nav{
     position: fixed;
-    z-index: 1000;
+    z-index: 1;
     top: 110px;
     background-color: #e2725b;
     width: 100%;
